src/objects/BGBK__Bill__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Code__c</fullName>
        <label>Agency Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Agency_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BGBK__Balance_Due__c</fullName>
        <description>Total outstanding amount.</description>
        <formula>BGBK__Total_Fees__c  -  BGBK__Total_Payments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BGBK__Cart_Cashier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cart Cashier</label>
        <referenceTo>BGBK__Cart__c</referenceTo>
        <relationshipLabel>Invoices (Cart Cashier)</relationshipLabel>
        <relationshipName>CashierInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__Cart__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cart</label>
        <referenceTo>BGBK__Cart__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__Due_Date__c</fullName>
        <description>Due date of the outstanding amount before interests and/or penalties start accruing.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
	<fields>
        <fullName>Portal_URL__c</fullName>
        <formula>$Label.OrgURLForPDF</formula>
        <label>Portal URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBK__Invoice_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BGBK__Recipient2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account that is responsible for payment of the invoice.</description>
        <label>Recipient</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Deprecated.</description>
        <inlineHelpText>NOT IN USE</inlineHelpText>
        <label>Recipient DO NOT USE</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Outstanding</fullName>
                    <default>true</default>
                    <label>Outstanding</label>
                </value>
                <value>
                    <fullName>Voided</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BGBK__Total_Fees__c</fullName>
        <description>Total invoice amount including interests and/or penalties.</description>
        <label>Invoice Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BGBK__Total_Payments__c</fullName>
        <description>Total payment allocated for the invoice.</description>
        <label>Total Payments</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BGBK__Tracking_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Invoice No.</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Permit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship with Permit</description>
        <label>Permit</label>
        <referenceTo>MUSW__Permit2__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>1966</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voucher_Number__c</fullName>
        <description>1966</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Voucher #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>Complaince__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Complaince</label>
        <referenceTo>MUSW__Complaint2__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>BGBK__All</fullName>
        <columns>NAME</columns>
        <columns>BGBK__Balance_Due__c</columns>
        <columns>BGBK__Total_Fees__c</columns>
        <columns>BGBK__Total_Payments__c</columns>
        <columns>BGBK__Cart__c</columns>
        <columns>BGBK__Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>I-{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BGBK__Can_not_Void_a_Paid_Invoice</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(BGBK__Status__c), ISPICKVAL(BGBK__Status__c, &apos;Voided&apos;), ISPICKVAL(PRIORVALUE(BGBK__Status__c), &apos;Paid&apos;))</errorConditionFormula>
        <errorMessage>Can not Void a Paid Invoice</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BGBK__Can_not_change_from_Voided_Invoice</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(BGBK__Status__c), ISPICKVAL(PRIORVALUE(BGBK__Status__c), &apos;Voided&apos;))</errorConditionFormula>
        <errorMessage>Can not change the Status of a Voided Invoice</errorMessage>
    </validationRules>
</CustomObject>